# simple-html-templating

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
resources/: context.json  template.html
resources/content/: content.txt
resources/template/: template.txt
src/: main.rs
src/document_parser/: html_doc.rs  io.rs  mod.rs
src/lib/: lib.rs
src/lib/document_parser/: html_body.rs  html_fragment.rs  mod.rs
src/lib/html_generator/: mod.rs
src/lib/html_generator/document_parser/: html_body.rs  mod.rs
src/lib/html_generator/index_html/: mod.rs
src/lib/html_generator/template/: mod.rs
src/lib/index_html/: mod.rs
src/lib/io/: blog_post.rs  mod.rs
src/lib/shared/: enums.rs  errors.rs  mod.rs  structs.rs
src/lib/template/: mod.rs
tests/: get_context_tests.rs  get_text_content_tests.rs  io.rs
tests/resources/: context.json
tests/resources/test_content/: text_content_one.txt  text_content_two.txt
