[package]
name = "html_templating"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"



[[bin]]
name = "html_templating_bin"
path = "src/main.rs"

[lib]
name = "html_templating_lib"
path = "src/lib/lib.rs"
